--- a/ReactApp/appsettings.json
+++ b/ReactApp/appsettings.json
@@ -1,7 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "BlogContext": "Server=192.168.0.102;Database=blog;Username=blogadmin;Password=blogadmin"
+    },
+    "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
+    "JWTLifespan": 2592000
 }
